--- a/index.html
+++ b/index.html
@@ -71,142 +71,146 @@
       <!-- Our preference -->
       <section class="pref-section">
         <div class="container-pref container">
-        <h2 class="hidden-tittle">Our preference</h2>
-        <ul class="pref-list list">
-          <li class="pref-list-item">
-            <h3 class="pref-title">Strategy</h3>
-            <p class="pref-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="pref-list-item">
-            <h3 class="pref-title">Punctuality</h3>
-            <p class="pref-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="pref-list-item">
-            <h3 class="pref-title">Diligence</h3>
-            <p class="pref-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="pref-list-item">
-            <h3 class="pref-title">Technologies</h3>
-            <p class="pref-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="hidden-tittle">Our preference</h2>
+          <ul class="pref-list list">
+            <li class="pref-list-item">
+              <h3 class="pref-title">Strategy</h3>
+              <p class="pref-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="pref-list-item">
+              <h3 class="pref-title">Punctuality</h3>
+              <p class="pref-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="pref-list-item">
+              <h3 class="pref-title">Diligence</h3>
+              <p class="pref-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="pref-list-item">
+              <h3 class="pref-title">Technologies</h3>
+              <p class="pref-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- About us -->
       <section class="about-section">
         <div class="container-about container">
-        <h2 class="about">What are we doing</h2>
-        <ul class="about-list list">
-          <li class="about-list-item">
-            <img
-              src="./images/img_1.jpg"
-              alt="Open project on the iMac"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="about-list-item">
-            <img
-              src="./images/img_2.jpg"
-              alt="Open messenger in a mobile"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="about-list-item">
-            <img
-              src="./images/img_3.jpg"
-              alt="Adapted site on a phone against the background of an open site on a laptop"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </div>
+          <h2 class="about">What are we doing</h2>
+          <ul class="about-list list">
+            <li class="about-list-item">
+              <img
+                src="./images/img_1.jpg"
+                alt="Open project on the iMac"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="about-list-item">
+              <img
+                src="./images/img_2.jpg"
+                alt="Open messenger in a mobile"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="about-list-item">
+              <img
+                src="./images/img_3.jpg"
+                alt="Adapted site on a phone against the background of an open site on a laptop"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Our team -->
       <section class="our-team">
         <div class="container-team container">
-        <h2 class="team">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-card">
-            <img class="team-photo"
-              src="./images/team_1.jpg"
-              alt="Photo of Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <div class="team-item">
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </div>
-          </li>
-          <li class="team-card">
-            <img class="team-photo"
-              src="./images/team_2.jpg"
-              alt="Photo of Tom Ford"
-              width="264"
-              height="260"
-            />
-            <div class="team-item">
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </div>
-          </li>
-          <li class="team-card">
-            <img class="team-photo"
-              src="./images/team_3.jpg"
-              alt="Photo of Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <div class="team-item">
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </div>
-          </li>
-          <li class="team-card">
-            <img class="team-photo"
-              src="./images/team_4.jpg"
-              alt="Photo of Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <div class="team-item">
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </div>
-          </li>
-        </ul>
+          <h2 class="team">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-card">
+              <img
+                class="team-photo"
+                src="./images/team_1.jpg"
+                alt="Photo of Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-item">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-photo"
+                src="./images/team_2.jpg"
+                alt="Photo of Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-item">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-photo"
+                src="./images/team_3.jpg"
+                alt="Photo of Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-item">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-photo"
+                src="./images/team_4.jpg"
+                alt="Photo of Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-item">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-    </div>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="container-footer container">
-      <a href="./index.html" class="footer-link link"
-        >Web<span class="footer-link-web">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with
-        digital marketing & growth solutions.
-      </p>
-    </div>
+        <a href="./index.html" class="footer-link link"
+          >Web<span class="footer-link-web">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
